--- a/ML Model.ipynb
+++ b/ML Model.ipynb
@@ -39,6 +39,7 @@
     "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import xgboost as xgb\n",
     "import sklearn\n",
     "from sklearn.model_selection import train_test_split"
    ]
@@ -115,37 +116,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 176,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "xcols = [x for x in df1.columns if x!='ad']\n",
-    "xs = df1[xcols]\n",
-    "ys = df1['ad']=='ad.'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 192,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "xcols = [x for x in df1.columns if x!='ad']\n",
     "X_train, X_test, y_train, y_test = sklearn.model_selection.train_test_split(\n",
-    "                                        xs, ys, test_size=0.33, random_state=420)"
+    "                                        df1[xcols].values, (df1['ad']=='ad.').astype(int), \n",
+    "                                        test_size=0.33, random_state=420)"
    ]
   },
   {
