Looks like the best model is naive bayes...lol

--- a/ML Model.ipynb
+++ b/ML Model.ipynb
@@ -1,43 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Problem\n",
-    "Using a dataset of past advertisements on the Internet, can we accurately predict what image will be an advertisement based on attributes of that image?\n",
-    "\n",
-    "# Project\n",
-    "The features encode the geometry of the image (if available) as well as phrases occurring in the URL, \n",
-    "the image's URL and alt text, the anchor text, and words occurring near the anchor text.\n",
-    "\n",
-    "Number of Instances: 3,279 (2,821 non ads, 458 ads)\n",
-    "Number of Attributes: 1,558 (3 continous; others binary)\n",
-    "\n",
-    "28% of instances are missing some of the continuous attributes.\n",
-    "\n",
-    "Missing values should be interpreted as \"unknown\"\n",
-    "\n",
-    "Class Distribution- number of instances per class: 2,821 non ads, 458 ads.\n",
-    "\n",
-    "The task is to predict whether an image is an advertisement (\"ad\") or not (\"non ad\").\n",
-    "\n",
-    "Deliverables\n",
-    "\n",
-    "Please send us the following:\n",
-    "\n",
-    "Code, and associated files, used for the project. You can send us a zipfile, or upload the project to a public github repo.\n",
-    "\n",
-    "The algorithm you developed to make your predictions\n",
-    "\n",
-    "How we can run the algorithm on a test data set\n",
-    "\n",
-    "The process you used to analyze the data and came to your conclusions"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -49,6 +14,7 @@
     "import xgboost as xgb\n",
     "import sklearn\n",
     "from sklearn.linear_model import LassoCV\n",
+    "from sklearn.naive_bayes import BernoulliNB\n",
     "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -70,11 +36,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "//anaconda/lib/python2.7/site-packages/IPython/core/interactiveshell.py:2902: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
    "source": [
     "df1 = pd.read_csv(os.path.join(pth, inputfile), header=None)\n",
     "df2 = pd.read_csv(os.path.join(pth, colfile), sep=\":\", skiprows=0)\n",
@@ -84,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -95,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -110,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -124,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -142,13 +117,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "ys = (df1['ad']=='ad').astype(int).values\n",
+    "ys = (df1['ad'].str.strip() == 'ad.' ).astype(int).values\n",
     "xcols = [col for col in df1.columns if col !='ad']\n",
     "X_train, X_valid, X_test = df1.ix[trainfilt, xcols].values, df1.ix[validfilt, xcols].values, df1.ix[testfilt, xcols].values\n",
     "y_train, y_valid, y_test = ys[trainfilt], ys[validfilt], ys[testfilt]"
@@ -156,20 +131,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "dtrain = xgb.DMatrix(X_train, label=y_train)\n",
-    "dvalid  = xgb.DMatrix(X_test, label=y_valid)\n",
+    "dvalid  = xgb.DMatrix(X_valid, label=y_valid)\n",
     "dtest  = xgb.DMatrix(X_test, label=y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 96,
    "metadata": {
     "collapsed": false
    },
@@ -181,17 +156,31 @@
     "xgbpred = model.predict(dtrain)\n",
     "xgbproba = 1/ (1. + np.exp( - model.predict(dtrain) ))\n",
     "\n",
-    "xgbpredtest = model.predict(dtest)\n",
-    "xgbprobatest = 1/ (1. + np.exp( - model.predict(dtest) ))"
+    "xgbpredvalid = model.predict(dvalid)\n",
+    "xgbprobavalid = 1/ (1. + np.exp( - model.predict(dvalid) ))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LassoCV(alphas=None, copy_X=True, cv=None, eps=0.001, fit_intercept=True,\n",
+       "    max_iter=1000, n_alphas=100, n_jobs=1, normalize=False, positive=False,\n",
+       "    precompute='auto', random_state=None, selection='cyclic', tol=0.0001,\n",
+       "    verbose=False)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "glmmodel  = LassoCV()\n",
     "glmmodel.fit(X_train, y_train)"
@@ -199,86 +188,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 91,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "glmpred = model.predict(X_train)\n",
+    "glmpred = glmmodel.predict(X_train)\n",
     "glmproba = 1/ (1. + np.exp( - glmpred ))\n",
     "\n",
-    "glmpredtest = model.predict(X_test)\n",
-    "glmprobatest = 1/ (1. + np.exp( - glmpredtest ))"
+    "glmpredvalid = glmmodel.predict(X_valid)\n",
+    "glmprobavalid = 1/ (1. + np.exp( - glmpredvalid ))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "col_0  False  True \n",
-      "row_0              \n",
-      "0        263   1195\n",
-      "1         10    209\n",
-      "AUC = 0.870\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Confusion Matrix\n",
-    "print(pd.crosstab(y_train, glmproba >= .5))\n",
-    "\n",
-    "print(\"AUC = %.3f\" % roc_auc_score(y_train, proba))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 176,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "fullpred  = (xgbpred + pred)/2.\n",
-    "fullproba = 1/ (1. + np.exp( - fullpred ))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 177,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "col_0  False  True \n",
-      "row_0              \n",
-      "0        166   1292\n",
-      "1          0    219\n",
-      "AUC = 0.960\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Confusion Matrix\n",
-    "print(pd.crosstab(y_train, fullproba >= .5))\n",
-    "\n",
-    "print(\"AUC = %.3f\" % roc_auc_score(y_train, fullproba))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -289,33 +214,35 @@
        "BernoulliNB(alpha=1.0, binarize=0.0, class_prior=None, fit_prior=True)"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.naive_bayes import BernoulliNB\n",
-    "clf = BernoulliNB()\n",
-    "clf.fit(X_train, y_train)\n",
-    "BernoulliNB(alpha=1.0, binarize=0.0, class_prior=None, fit_prior=True)"
+    "nbmodel = BernoulliNB() \n",
+    "nbmodel.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 102,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "nbclass = clf.predict(X_train)  \n",
-    "nbclasstest = clf.predict(X_test)"
+    "nbclass = nbmodel.predict(X_train)  \n",
+    "nbclassvalid = nbmodel.predict(X_valid)\n",
+    "\n",
+    "nbproba = nbmodel.predict_proba(X_train)[:,1]\n",
+    "nbprobavalid = nbmodel.predict_proba(X_valid)[:,1]\n",
+    "nbprobatest = nbmodel.predict_proba(X_test)[:,1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false
    },
@@ -324,49 +251,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "col_0     0    1\n",
-      "row_0           \n",
-      "0      1451    7\n",
-      "1        57  162\n",
-      "col_0     0    1\n",
-      "row_0           \n",
-      "0      1357    5\n",
-      "1        54  186\n"
+      "Train LASSO Logistic AUC = 0.883916\n",
+      "Valid LASSO Logistic AUC = 0.889502\n",
+      "Train XGBoost AUC = 0.978075\n",
+      "Valid XGBoost AUC = 0.966410\n",
+      "Train Naive Bayes AUC = 0.968103\n",
+      "Valid Naive Bayes AUC = 0.959572\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Train LASSO Logistic AUC = %.6f\" % roc_auc_score(y_train, glmproba))\n",
+    "print(\"Valid LASSO Logistic AUC = %.6f\" % roc_auc_score(y_valid, glmprobavalid))\n",
+    "\n",
+    "print(\"Train XGBoost AUC = %.6f\" % roc_auc_score(y_train, xgbproba))\n",
+    "print(\"Valid XGBoost AUC = %.6f\" % roc_auc_score(y_valid, xgbprobavalid))\n",
+    "\n",
+    "print(\"Train Naive Bayes AUC = %.6f\" % roc_auc_score(y_train, nbproba))\n",
+    "print(\"Valid Naive Bayes AUC = %.6f\" % roc_auc_score(y_valid, nbprobavalid))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "col_0    0    1\n",
+      "row_0          \n",
+      "0      930    0\n",
+      "1       52  103\n",
+      "col_0    0    1\n",
+      "row_0          \n",
+      "0      958    4\n",
+      "1       58  103\n"
      ]
     }
    ],
    "source": [
     "# Confusion Matrix\n",
     "print(pd.crosstab(y_train, nbclass))\n",
-    "print(pd.crosstab(y_test, nbclasstest ))"
+    "print(pd.crosstab(y_valid, nbclassvalid ))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.70922805,  0.64847951,  0.64847951, ...,  0.48652719,\n",
-       "        0.52276597,  0.52730148])"
-      ]
-     },
-     "execution_count": 184,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "glmprobatest"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 99,
    "metadata": {
     "collapsed": false
    },
@@ -377,24 +312,24 @@
      "text": [
       "col_0  False  True \n",
       "row_0              \n",
-      "0        263   1195\n",
-      "1         10    209\n",
+      "0        220    710\n",
+      "1          2    153\n",
       "col_0  False  True \n",
       "row_0              \n",
-      "0        258   1104\n",
-      "1          2    238\n"
+      "0        207    721\n",
+      "1          4    139\n"
      ]
     }
    ],
    "source": [
     "# Confusion Matrix\n",
     "print(pd.crosstab(y_train, glmproba >= 0.5))\n",
-    "print(pd.crosstab(y_test, glmprobatest >= 0.5 ))"
+    "print(pd.crosstab(y_valid, glmprobavalid >= 0.5 ))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 100,
    "metadata": {
     "collapsed": false
    },
@@ -405,19 +340,77 @@
      "text": [
       "col_0  True\n",
       "row_0      \n",
-      "0      1458\n",
-      "1       219\n",
+      "0       930\n",
+      "1       155\n",
       "col_0  True\n",
       "row_0      \n",
-      "0      1362\n",
-      "1       240\n"
+      "0       928\n",
+      "1       143\n"
      ]
     }
    ],
    "source": [
     "# Confusion Matrix\n",
     "print(pd.crosstab(y_train, xgbproba >= 0.5))\n",
-    "print(pd.crosstab(y_test, xgbprobatest >= 0.5 ))"
+    "print(pd.crosstab(y_valid, xgbprobavalid >= 0.5 ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Naive Bayes AUC = 0.968103\n",
+      "Valid Naive Bayes AUC = 0.959572\n",
+      "Test Naive Bayes AUC = 0.947379\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Choosing the model with the best performance on the validation data\n",
+    "\n",
+    "print(\"Train Naive Bayes AUC = %.6f\" % roc_auc_score(y_train, nbproba))\n",
+    "print(\"Valid Naive Bayes AUC = %.6f\" % roc_auc_score(y_valid, nbprobavalid))\n",
+    "print(\"Test Naive Bayes AUC = %.6f\" % roc_auc_score(y_test, nbprobatest))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "col_0    0    1\n",
+      "row_0          \n",
+      "0      930    0\n",
+      "1       52  103\n",
+      "col_0    0   1\n",
+      "row_0         \n",
+      "0      926   2\n",
+      "1       45  98\n",
+      "col_0    0    1\n",
+      "row_0          \n",
+      "0      958    4\n",
+      "1       58  103\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Confusion Matrix\n",
+    "print(pd.crosstab(y_train, nbclass))\n",
+    "print(pd.crosstab(y_valid, nbclassvalid))\n",
+    "print(pd.crosstab(y_test, nbclasstest))"
    ]
   },
   {
