--- a/ML Model.ipynb
+++ b/ML Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false
    },
@@ -13,6 +13,8 @@
     "import pandas as pd\n",
     "import xgboost as xgb\n",
     "import sklearn\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.externals import joblib\n",
     "from sklearn.linear_model import LassoCV\n",
     "from sklearn.naive_bayes import BernoulliNB\n",
     "from sklearn.metrics import roc_auc_score\n",
@@ -273,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 114,
    "metadata": {
     "collapsed": false
    },
@@ -282,26 +284,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "col_0    0    1\n",
-      "row_0          \n",
-      "0      930    0\n",
-      "1       52  103\n",
-      "col_0    0    1\n",
-      "row_0          \n",
-      "0      958    4\n",
-      "1       58  103\n"
+      "Training Confusion Matrix\n",
+      "[[930   0]\n",
+      " [ 52 103]]\n",
+      "Validation Confusion Matrix\n",
+      "[[926   2]\n",
+      " [ 45  98]]\n"
      ]
     }
    ],
    "source": [
     "# Confusion Matrix\n",
-    "print(pd.crosstab(y_train, nbclass))\n",
-    "print(pd.crosstab(y_valid, nbclassvalid ))"
+    "print(\"Training Confusion Matrix\")\n",
+    "print(confusion_matrix(y_train, nbclass))\n",
+    "print(\"Validation Confusion Matrix\")\n",
+    "print(confusion_matrix(y_valid, nbclassvalid))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false
    },
@@ -310,26 +312,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "col_0  False  True \n",
-      "row_0              \n",
-      "0        220    710\n",
-      "1          2    153\n",
-      "col_0  False  True \n",
-      "row_0              \n",
-      "0        207    721\n",
-      "1          4    139\n"
+      "Training Confusion Matrix\n",
+      "[[220 710]\n",
+      " [  2 153]]\n",
+      "Validation Confusion Matrix\n",
+      "[[207 721]\n",
+      " [  4 139]]\n"
      ]
     }
    ],
    "source": [
     "# Confusion Matrix\n",
-    "print(pd.crosstab(y_train, glmproba >= 0.5))\n",
-    "print(pd.crosstab(y_valid, glmprobavalid >= 0.5 ))"
+    "print(\"Training Confusion Matrix\")\n",
+    "print(confusion_matrix(y_train, glmproba >= 0.5))\n",
+    "print(\"Validation Confusion Matrix\")\n",
+    "print(confusion_matrix(y_valid, glmprobavalid >= 0.5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 116,
    "metadata": {
     "collapsed": false
    },
@@ -338,21 +340,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "col_0  True\n",
-      "row_0      \n",
-      "0       930\n",
-      "1       155\n",
-      "col_0  True\n",
-      "row_0      \n",
-      "0       928\n",
-      "1       143\n"
+      "Training Confusion Matrix\n",
+      "[[  0 930]\n",
+      " [  0 155]]\n",
+      "Validation Confusion Matrix\n",
+      "[[  0 928]\n",
+      " [  0 143]]\n"
      ]
     }
    ],
    "source": [
     "# Confusion Matrix\n",
-    "print(pd.crosstab(y_train, xgbproba >= 0.5))\n",
-    "print(pd.crosstab(y_valid, xgbprobavalid >= 0.5 ))"
+    "print(\"Training Confusion Matrix\")\n",
+    "print(confusion_matrix(y_train, xgbproba >= 0.5))\n",
+    "print(\"Validation Confusion Matrix\")\n",
+    "print(confusion_matrix(y_valid, xgbprobavalid >= 0.5))"
    ]
   },
   {
@@ -382,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 118,
    "metadata": {
     "collapsed": false
    },
@@ -391,36 +393,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "col_0    0    1\n",
-      "row_0          \n",
-      "0      930    0\n",
-      "1       52  103\n",
-      "col_0    0   1\n",
-      "row_0         \n",
-      "0      926   2\n",
-      "1       45  98\n",
-      "col_0    0    1\n",
-      "row_0          \n",
-      "0      958    4\n",
-      "1       58  103\n"
+      "Training Confusion Matrix\n",
+      "[[930   0]\n",
+      " [ 52 103]]\n",
+      "Validation Confusion Matrix\n",
+      "[[926   2]\n",
+      " [ 45  98]]\n",
+      "Test Confusion Matrix\n",
+      "[[958   4]\n",
+      " [ 58 103]]\n"
      ]
     }
    ],
    "source": [
     "# Confusion Matrix\n",
-    "print(pd.crosstab(y_train, nbclass))\n",
-    "print(pd.crosstab(y_valid, nbclassvalid))\n",
-    "print(pd.crosstab(y_test, nbclasstest))"
+    "print(\"Training Confusion Matrix\")\n",
+    "print(confusion_matrix(y_train, nbclass))\n",
+    "print(\"Validation Confusion Matrix\")\n",
+    "print(confusion_matrix(y_valid, nbclassvalid))\n",
+    "print(\"Test Confusion Matrix\")\n",
+    "print(confusion_matrix(y_test, nbclasstest))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ad_classifier.pkl']"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(nbmodel, 'ad_classifier.pkl') "
+   ]
   }
  ],
  "metadata": {
